--- a/asp_presentaciones/Pages/Shared/_Layout.cshtml
+++ b/asp_presentaciones/Pages/Shared/_Layout.cshtml
@@ -90,29 +90,37 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">   ASP  </a>
+                <center><a class="navbar-brand" asp-area="" asp-page="/Index"></a></center>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" asp-page="/Index">Home</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page="/Index">
+                                 <img src="/Imagenes/casa-silueta-negra-sin-puerta.png"
+                                          alt="Sede representativa"
+                                          style="max-width: 50px; height: auto; border: 10px solid #ccc; border-radius: 10px;" />
+                            </a>
+                        </li>
                         <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Hoteles">Hoteles</a></li>
                         <li class ="nav-item"><a class="nav-link" asp-page="/Ventanas/Sedes">Sedes</a></li>
                         <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Huespedes">Huespedes</a></li>
                         <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Estadias">Estadias</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Reservas">Reservas</a></li>
                      
                         <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Habitaciones">Habitaciones</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/ServiciosExtras">ServiciosExtras</a></li>
                         <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Empleados">Empleados</a></li>
                      
-                        <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Reservas">Reservas</a></li>
+                        
                         <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Facturas">Facturas</a></li>
                         <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Reservas_Habitaciones">Reservas_Habitaciones</a></li>
                         <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Empleados_ServiciosExtras">Empleados_ServiciosExtras</a></li>
                         
                         <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/Sedes_ServiciosExtras">Sedes_ServiciosExtras</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-page="/Ventanas/ServiciosExtras">ServiciosExtras</a></li>
+                        
                        
                     </ul>
                 </div>
