--- a/asp_presentaciones/Pages/Ventanas/Sedes_ServiciosExtras.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Sedes_ServiciosExtras.cshtml
@@ -6,7 +6,7 @@
 <center>
     <div class="container mt-4">
         <div class="text-center mb-4">
-            <img src="/Imagenes/servicio_extra.jpeg"
+            <img src="/Imagenes/hotel.jpeg"
                  alt="Servicios extra"
                  style="max-width: 500px; height: auto; border: 10px solid #ccc; border-radius: 10px;" />
             <p style="font-style: italic; font-size: small;">Servicios adicionales por sede</p>
@@ -33,14 +33,14 @@
             @if (Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
             Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
-                <input type="hidden" asp-for="@Model.Actual!.Id_Sedes_ServiciosExtras" />
+                <input type="hidden" asp-for="Actual!.Id_Sedes_ServiciosExtras" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
-                <input type="hidden" asp-for="@Model.Actual!.Id_Sede" />
-                <input type="hidden" asp-for="@Model.Actual!.Id_ServicioExtra" />
-                <input type="hidden" asp-for="@Model.Actual!.Descuento_Sede" />
+                <input type="hidden" asp-for="Actual!.Id_Sede" />
+                <input type="hidden" asp-for="Actual!.Id_ServicioExtra" />
+                <input type="hidden" asp-for="Actual!.Descuento_Sede" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
@@ -49,27 +49,47 @@
                     <h4 class="mb-3">Nueva Sede - Servicio Extra</h4>
 
                     <div class="mb-3 row">
-                        <label class="col-sm-2 col-form-label">Sede</label>
+                        <label class="col-sm-2 col-form-label">Id_Sede</label>
                         <div class="col-sm-10">
                             <select asp-for="@Model.Actual!.Id_Sede" class="form-select" asp-items="@(new SelectList(Model.Sedes, "Id_Sede", "Locacion"))">
-                                <option value="">-- Seleccione una sede --</option>
+                                <option value="">-- Seleccione una Sede --</option>
                             </select>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
-                        <label class="col-sm-2 col-form-label">Servicio Extra</label>
-                        <div class="col-sm-10">
-                            <select asp-for="@Model.Actual!.Id_ServicioExtra" class="form-select" asp-items="@(new SelectList(Model.ServiciosExtras, "Id_ServicioExtra", "Jacuzzi"))">
-                                <option value="">-- Seleccione un servicio --</option>
-                            </select>
+                        <label class="col-sm-2 col-form-label">Servicios Disponibles</label>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" asp-for="Actual!.ServicioExtra!.Piscina" />
+                            <label class="form-check-label" asp-for="Actual!.ServicioExtra!.Piscina">Piscina</label>
+                        </div>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" asp-for="Actual!.ServicioExtra!.Restaurante" />
+                            <label class="form-check-label" asp-for="Actual!.ServicioExtra!.Restaurante">Restaurante</label>
+                        </div>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" asp-for="Actual!.ServicioExtra!.Limpieza" />
+                            <label class="form-check-label" asp-for="Actual!.ServicioExtra!.Limpieza">Limpieza</label>
+                        </div>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" asp-for="Actual!.ServicioExtra!.Mantenimiento" />
+                            <label class="form-check-label" asp-for="Actual!.ServicioExtra!.Mantenimiento">Mantenimiento</label>
+                        </div>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" asp-for="Actual!.ServicioExtra!.Gimnasio" />
+                            <label class="form-check-label" asp-for="Actual!.ServicioExtra!.Gimnasio">Gimnasio</label>
+                        </div>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" asp-for="Actual!.ServicioExtra!.Jacuzzi" />
+                            <label class="form-check-label" asp-for="Actual!.ServicioExtra!.Jacuzzi">Jacuzzi</label>
                         </div>
                     </div>
 
                     <div class="mb-3 row">
                         <label class="col-sm-2 col-form-label">Descuento (%)</label>
                         <div class="col-sm-10">
-                            <input class="form-control" asp-for="@Model.Actual!.Descuento_Sede" />
+                            <input class="form-control" asp-for="Actual!.Descuento_Sede" />
+                            <span asp-validation-for="Actual!.Descuento_Sede" class="text-danger"></span>
                         </div>
                     </div>
                 </div>
@@ -77,7 +97,7 @@
 
             @if (ViewData.ContainsKey("Mensaje"))
             {
-                <input type="hidden" asp-for="@Model.Accion" />
+                <input type="hidden" asp-for="Accion" />
                 @await Html.PartialAsync("../Emergentes/Mensajes.cshtml")
             }
 
@@ -87,8 +107,9 @@
                     <div class='pp_del_inner'>
                         <div style='width:95%'>
                             <h2>Mensaje</h2>
-                            <h4>¿Desea borrar este vínculo sede - servicio extra?</h4>
-                            <h6>@Model.Actual?.Sedes?.Direccion - @Model.Actual?.ServicioExtra?.Jacuzzi</h6>
+                            <h4>¿Desea borrar esta  sede - servicio extra?</h4>
+                            <h6>@Model.Actual!.Descuento_Sede</h6>
+                             
                             <br />
                             <input type="submit" value="Borrar" asp-page-handler="BtBorrar" class="btn btn-danger me-2" />
                             <input type="submit" value="Cerrar" asp-page-handler="BtCancelar" class="btn btn-secondary" />
@@ -103,7 +124,7 @@
                 <div class="mb-3">
                     <input id="flId_Sedes_ServiciosExtras"
                            class="form-control"
-                           asp-for="@Model.Filtro!.Id_Sedes_ServiciosExtras"
+                           asp-for="Filtro!.Id_Sedes_ServiciosExtras"
                            placeholder="Id vínculo" />
                 </div>
 
@@ -111,30 +132,33 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Sede</th>
-                                <th>Servicio Extra</th>
+                                <th>Id_Sedes_ServiciosEstras</th>
+                                <th>Id_Sede</th>
+                                <th>Id_Servicios</th>
                                 <th>Descuento (%)</th>
                                 <th>Acción</th>
                             </tr>
                         </thead>
                         <tbody>
-                            @if (Model != null && Model.Lista != null)
+                            @if (Model?.Lista != null)
                             {
                                 foreach (var elemento in Model.Lista)
                                 {
                                     <tr>
                                         <td>@elemento.Id_Sedes_ServiciosExtras</td>
-                                        <td>@elemento.Sedes?.Direccion</td>
-                                        <td>@elemento.ServicioExtra?.Jacuzzi</td>
+                                        <td>@elemento.Id_Sede</td>
+                                        <td>
+                                            @elemento.Id_ServicioExtra
+                                          
+                                        </td>
                                         <td>@elemento.Descuento_Sede</td>
                                         <td>
                                             <input type="submit" value="Modificar" asp-page-handler="BtModificar"
                                                    class="btn btn-warning btn-sm me-1"
-                                                   asp-route-data="@elemento.Id_Sedes_ServiciosExtras" />
+                                                   asp-route-id="@elemento.Id_Sedes_ServiciosExtras" />
                                             <input type="submit" value="Borrar" asp-page-handler="BtBorrarVal"
                                                    class="btn btn-danger btn-sm"
-                                                   asp-route-data="@elemento.Id_Sedes_ServiciosExtras" />
+                                                   asp-route-id="@elemento.Id_Sedes_ServiciosExtras" />
                                         </td>
                                     </tr>
                                 }
@@ -146,3 +170,4 @@
         </form>
     </div>
 </center>
+
